--- a/website.html
+++ b/website.html
@@ -254,7 +254,7 @@
         body.style.backgroundImage = "url('taekwondo-background.jpg')";
         overlay.style.backgroundColor = 'rgba(0, 0, 0, 0.4)';
       } else if (scrollPos >= soccerStart) {
-        body.style.backgroundImage = "url('soccer-background.jpg')";
+        body.style.backgroundImage = "url('soccer-background.png')";
         overlay.style.backgroundColor = 'rgba(0, 0, 0, 0.4)';
       } else {
         body.style.backgroundImage = "none";
