--- a/website.html
+++ b/website.html
@@ -269,13 +269,13 @@
         body.style.backgroundImage = "url('conclusion-background.jpg')";
         currentPhase = 'Conclusion';
       } else if (scrollPos >= roboticsStart) {
-        body.style.backgroundImage = "url('robotics-background.jpg')";
+        body.style.backgroundImage = "url('robotics-background.jpg!w700wp')";
         currentPhase = 'Robotics Phase';
       } else if (scrollPos >= tkdStart) {
         body.style.backgroundImage = "url('taekwondo-background.jpg')";
         currentPhase = 'Taekwondo Phase';
       } else if (scrollPos >= soccerStart) {
-        body.style.backgroundImage = "url('soccer-background.jpg')";
+        body.style.backgroundImage = "url('soccer-background.png')";
         currentPhase = 'Soccer Phase';
       } else {
         body.style.backgroundImage = "none";
