--- a/website.html
+++ b/website.html
@@ -272,7 +272,7 @@
         body.style.backgroundImage = "url('robotics-background.jpg!w700wp')";
         currentPhase = 'Robotics Phase';
       } else if (scrollPos >= tkdStart) {
-        body.style.backgroundImage = "url('taekwondo-background.jpg')";
+        body.style.backgroundImage = "url('taekwondo-background.png')";
         currentPhase = 'Taekwondo Phase';
       } else if (scrollPos >= soccerStart) {
         body.style.backgroundImage = "url('soccer-background.png')";
